check_PROGRAMS = test_bst test_variant

test_bst_SOURCES = test_bst.c
test_bst_CPPFLAGS = -I$(top_srcdir)/include
test_bst_LDADD = ../src/libcgs.la

test_variant_SOURCES = test_variant.c
test_variant_CPPFLAGS = -I$(top_srcdir)/include
test_variant_LDADD = ../src/libcgs.la

TESTS = $(check_PROGRAMS)

